src/main/java/org/example/cyphertransform/parsercypher/CypherParser.java
// Generated from C:/Users/21072/Desktop/Cypher-Transform-master/src/main/java/org/example/cyphertransform/parsercypher\CypherParser.g4 by ANTLR 4.12.0
package org.example.cyphertransform.parsercypher;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class CypherParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.12.0", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ASSIGN=1, ADD_ASSIGN=2, LE=3, GE=4, GT=5, LT=6, NOT_EQUAL=7, RANGE=8, 
		SEMI=9, DOT=10, COMMA=11, LPAREN=12, RPAREN=13, LBRACE=14, RBRACE=15, 
		LBRACK=16, RBRACK=17, SUB=18, PLUS=19, DIV=20, MOD=21, CARET=22, MULT=23, 
		ESC=24, COLON=25, STICK=26, DOLLAR=27, CALL=28, YIELD=29, FILTER=30, EXTRACT=31, 
		COUNT=32, EXISTS=33, SIZE=34, ABS=35, SUBSTRING=36, ToIntegerOrNull=37, 
		ToStringOrNull=38, ToBooleanOrNull=39, ToIntegerList=40, ToStringList=41, 
		ToBooleanList=42, NODES=43, RELATIONSHIPS=44, RANGEF=45, KEY=46, TYPE=47, 
		LABELS=48, LENGTH=49, EXISTSF=50, ROUND=51, MIN=52, MAX=53, AVG=54, SUM=55, 
		STARTNODE=56, ENDNODE=57, REDUCE=58, ELEMENTID=59, PROPERTIES=60, ISEMPTY=61, 
		REVERSE=62, COLLECT=63, PERCENTILEDISC=64, STDEVP=65, STDEV=66, ANY=67, 
		NONE=68, SINGLE=69, ALL=70, ASC=71, ASCENDING=72, BY=73, CREATE=74, DELETE=75, 
		DESC=76, DESCENDING=77, DETACH=78, LIMIT=79, MATCH=80, MERGE=81, ON=82, 
		OPTIONAL=83, ORDER=84, REMOVE=85, FOREACH=86, RETURN=87, SET=88, SKIP_W=89, 
		WHERE=90, WITH=91, UNION=92, UNWIND=93, AND=94, AS=95, CONTAINS=96, DISTINCT=97, 
		ENDS=98, IN=99, IS=100, NOT=101, OR=102, STARTS=103, XOR=104, FALSE=105, 
		TRUE=106, NULL_W=107, CONSTRAINT=108, DO=109, FOR=110, REQUIRE=111, UNIQUE=112, 
		CASE=113, WHEN=114, THEN=115, ELSE=116, END=117, MANDATORY=118, SCALAR=119, 
		OF=120, ADD=121, DROP=122, ID=123, ESC_LITERAL=124, CHAR_LITERAL=125, 
		STRING_LITERAL=126, DIGIT=127, FLOAT=128, WS=129, COMMENT=130, LINE_COMMENT=131, 
		ERRCHAR=132, Letter=133;
	public static final int
		RULE_script = 0, RULE_query = 1, RULE_regularQuery = 2, RULE_singleQuery = 3, 
		RULE_returnSt = 4, RULE_withSt = 5, RULE_skipSt = 6, RULE_limitSt = 7, 
		RULE_projectionBody = 8, RULE_projectionItems = 9, RULE_projectionItem = 10, 
		RULE_orderItem = 11, RULE_orderSt = 12, RULE_matchSt = 13, RULE_unwindSt = 14, 
		RULE_readingStatement = 15, RULE_updatingStatement = 16, RULE_deleteSt = 17, 
		RULE_removeSt = 18, RULE_foreachSt = 19, RULE_removeItem = 20, RULE_queryCallSt = 21, 
		RULE_parenExpressionChain = 22, RULE_yieldItems = 23, RULE_yieldItem = 24, 
		RULE_mergeSt = 25, RULE_mergeAction = 26, RULE_setSt = 27, RULE_setItem = 28, 
		RULE_nodeLabels = 29, RULE_createSt = 30, RULE_patternWhere = 31, RULE_where = 32, 
		RULE_pattern = 33, RULE_expression = 34, RULE_xorExpression = 35, RULE_andExpression = 36, 
		RULE_notExpression = 37, RULE_comparisonExpression = 38, RULE_comparisonSigns = 39, 
		RULE_addSubExpression = 40, RULE_multDivExpression = 41, RULE_powerExpression = 42, 
		RULE_unaryAddSubExpression = 43, RULE_atomicExpression = 44, RULE_listExpression = 45, 
		RULE_stringExpression = 46, RULE_stringExpPrefix = 47, RULE_nullExpression = 48, 
		RULE_propertyOrLabelExpression = 49, RULE_propertyExpression = 50, RULE_patternPart = 51, 
		RULE_patternElem = 52, RULE_patternElemChain = 53, RULE_properties = 54, 
		RULE_nodePattern = 55, RULE_atom = 56, RULE_lhs = 57, RULE_relationshipPattern = 58, 
		RULE_relationDetail = 59, RULE_relationshipTypes = 60, RULE_unionSt = 61, 
		RULE_subqueryExist = 62, RULE_subqueryCount = 63, RULE_functionInvocation = 64, 
		RULE_functionname = 65, RULE_parenthesizedExpression = 66, RULE_filterWith = 67, 
		RULE_patternComprehension = 68, RULE_relationshipsChainPattern = 69, RULE_listComprehension = 70, 
		RULE_filterExpression = 71, RULE_countAll = 72, RULE_expressionChain = 73, 
		RULE_caseExpression = 74, RULE_reduceExpression = 75, RULE_parameter = 76, 
		RULE_literal = 77, RULE_rangeLit = 78, RULE_boolLit = 79, RULE_numLit = 80, 
		RULE_stringLit = 81, RULE_charLit = 82, RULE_listLit = 83, RULE_mapLit = 84, 
		RULE_mapPair = 85, RULE_name = 86, RULE_symbol = 87, RULE_reservedWord = 88;
	private static String[] makeRuleNames() {
		return new String[] {
			"script", "query", "regularQuery", "singleQuery", "returnSt", "withSt", 
			"skipSt", "limitSt", "projectionBody", "projectionItems", "projectionItem", 
			"orderItem", "orderSt", "matchSt", "unwindSt", "readingStatement", "updatingStatement", 
			"deleteSt", "removeSt", "foreachSt", "removeItem", "queryCallSt", "parenExpressionChain", 
			"yieldItems", "yieldItem", "mergeSt", "mergeAction", "setSt", "setItem", 
			"nodeLabels", "createSt", "patternWhere", "where", "pattern", "expression", 
			"xorExpression", "andExpression", "notExpression", "comparisonExpression", 
			"comparisonSigns", "addSubExpression", "multDivExpression", "powerExpression", 
			"unaryAddSubExpression", "atomicExpression", "listExpression", "stringExpression", 
			"stringExpPrefix", "nullExpression", "propertyOrLabelExpression", "propertyExpression", 
			"patternPart", "patternElem", "patternElemChain", "properties", "nodePattern", 
			"atom", "lhs", "relationshipPattern", "relationDetail", "relationshipTypes", 
			"unionSt", "subqueryExist", "subqueryCount", "functionInvocation", "functionname", 
			"parenthesizedExpression", "filterWith", "patternComprehension", "relationshipsChainPattern", 
			"listComprehension", "filterExpression", "countAll", "expressionChain", 
			"caseExpression", "reduceExpression", "parameter", "literal", "rangeLit", 
			"boolLit", "numLit", "stringLit", "charLit", "listLit", "mapLit", "mapPair", 
			"name", "symbol", "reservedWord"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'='", "'+='", "'<='", "'>='", "'>'", "'<'", "'<>'", "'..'", "';'", 
			"'.'", "','", "'('", "')'", "'{'", "'}'", "'['", "']'", "'-'", "'+'", 
			"'/'", "'%'", "'^'", "'*'", "'`'", "':'", "'|'", "'$'", "'CALL'", "'YIELD'", 
			"'FILTER'", "'EXTRACT'", "'COUNT'", "'EXISTS'", "'size'", "'abs'", "'substring'", 
			"'toIntegerOrNull'", "'toStringOrNull'", "'toBooleanOrNull'", "'toIntegerList'", 
			"'toStringList'", "'toBooleanList'", "'nodes'", "'relationships'", "'range'", 
			"'keys'", "'type'", "'labels'", "'length'", "'exists'", "'round'", "'min'", 
			"'max'", "'avg'", "'sum'", "'startNode'", "'endNode'", "'reduce'", "'elementId'", 
			"'properties'", "'isEmpty'", "'reverse'", "'collect'", "'percentileDisc'", 
			"'stDevP'", "'stDev'", "'ANY'", "'NONE'", "'SINGLE'", "'ALL'", "'ASC'", 
			"'ASCENDING'", "'BY'", "'CREATE'", "'DELETE'", "'DESC'", "'DESCENDING'", 
			"'DETACH'", "'LIMIT'", "'MATCH'", "'MERGE'", "'ON'", "'OPTIONAL'", "'ORDER'", 
			"'REMOVE'", "'FOREACH'", "'RETURN'", "'SET'", "'SKIP'", "'WHERE'", "'WITH'", 
			"'UNION'", "'UNWIND'", "'AND'", "'AS'", "'CONTAINS'", "'DISTINCT'", "'ENDS'", 
			"'IN'", "'IS'", "'NOT'", "'OR'", "'STARTS'", "'XOR'", "'FALSE'", "'TRUE'", 
			"'NULL'", "'CONSTRAINT'", "'DO'", "'FOR'", "'REQUIRE'", "'UNIQUE'", "'CASE'", 
			"'WHEN'", "'THEN'", "'ELSE'", "'END'", "'MANDATORY'", "'SCALAR'", "'OF'", 
			"'ADD'", "'DROP'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "ASSIGN", "ADD_ASSIGN", "LE", "GE", "GT", "LT", "NOT_EQUAL", "RANGE", 
			"SEMI", "DOT", "COMMA", "LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACK", 
			"RBRACK", "SUB", "PLUS", "DIV", "MOD", "CARET", "MULT", "ESC", "COLON", 
			"STICK", "DOLLAR", "CALL", "YIELD", "FILTER", "EXTRACT", "COUNT", "EXISTS", 
			"SIZE", "ABS", "SUBSTRING", "ToIntegerOrNull", "ToStringOrNull", "ToBooleanOrNull", 
			"ToIntegerList", "ToStringList", "ToBooleanList", "NODES", "RELATIONSHIPS", 
			"RANGEF", "KEY", "TYPE", "LABELS", "LENGTH", "EXISTSF", "ROUND", "MIN", 
			"MAX", "AVG", "SUM", "STARTNODE", "ENDNODE", "REDUCE", "ELEMENTID", "PROPERTIES", 
			"ISEMPTY", "REVERSE", "COLLECT", "PERCENTILEDISC", "STDEVP", "STDEV", 
			"ANY", "NONE", "SINGLE", "ALL", "ASC", "ASCENDING", "BY", "CREATE", "DELETE", 
			"DESC", "DESCENDING", "DETACH", "LIMIT", "MATCH", "MERGE", "ON", "OPTIONAL", 
			"ORDER", "REMOVE", "FOREACH", "RETURN", "SET", "SKIP_W", "WHERE", "WITH", 
			"UNION", "UNWIND", "AND", "AS", "CONTAINS", "DISTINCT", "ENDS", "IN", 
			"IS", "NOT", "OR", "STARTS", "XOR", "FALSE", "TRUE", "NULL_W", "CONSTRAINT", 
			"DO", "FOR", "REQUIRE", "UNIQUE", "CASE", "WHEN", "THEN", "ELSE", "END", 
			"MANDATORY", "SCALAR", "OF", "ADD", "DROP", "ID", "ESC_LITERAL", "CHAR_LITERAL", 
			"STRING_LITERAL", "DIGIT", "FLOAT", "WS", "COMMENT", "LINE_COMMENT", 
			"ERRCHAR", "Letter"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "CypherParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CypherParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ScriptContext extends ParserRuleContext {
		public QueryContext query() {
			return getRuleContext(QueryContext.class,0);
		}
		public TerminalNode EOF() { return getToken(CypherParser.EOF, 0); }
		public TerminalNode SEMI() { return getToken(CypherParser.SEMI, 0); }
		public ScriptContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_script; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CypherParserListener ) ((CypherParserListener)listener).enterScript(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CypherParserListener ) ((CypherParserListener)listener).exitScript(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CypherParserVisitor ) return ((CypherParserVisitor<? extends T>)visitor).visitScript(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ScriptContext script() throws RecognitionException {
		ScriptContext _localctx = new ScriptContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_script);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(178);
			query();
			setState(180);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SEMI) {
				{
				setState(179);
				match(SEMI);
				}
			}

			setState(182);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class QueryContext extends ParserRuleContext {
		public RegularQueryContext regularQuery() {
			return getRuleContext(RegularQueryContext.class,0);
		}
		public QueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_query; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CypherParserListener ) ((CypherParserListener)listener).enterQuery(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CypherParserListener ) ((CypherParserListener)listener).exitQuery(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CypherParserVisitor ) return ((CypherParserVisitor<? extends T>)visitor).visitQuery(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QueryContext query() throws RecognitionException {
		QueryContext _localctx = new QueryContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_query);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(184);
			regularQuery();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RegularQueryContext extends ParserRuleContext {
		public SingleQueryContext singleQuery() {
			return getRuleContext(SingleQueryContext.class,0);
		}
		public List<UnionStContext> unionSt() {
			return getRuleContexts(UnionStContext.class);
		}
		public UnionStContext unionSt(int i) {
			return getRuleContext(UnionStContext.class,i);
		}
		public RegularQueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_regularQuery; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CypherParserListener ) ((CypherParserListener)listener).enterRegularQuery(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CypherParserListener ) ((CypherParserListener)listener).exitRegularQuery(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CypherParserVisitor ) return ((CypherParserVisitor<? extends T>)visitor).visitRegularQuery(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RegularQueryContext regularQuery() throws RecognitionException {
		RegularQueryContext _localctx = new RegularQueryContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_regularQuery);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(186);
			singleQuery();
			setState(190);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==UNION) {
				{
				{
				setState(187);
				unionSt();
				}
				}
				setState(192);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SingleQueryContext extends ParserRuleContext {
		public List<ReadingStatementContext> readingStatement() {
			return getRuleContexts(ReadingStatementContext.class);
		}
		public ReadingStatementContext readingStatement(int i) {
			return getRuleContext(ReadingStatementContext.class,i);
		}
		public List<UpdatingStatementContext> updatingStatement() {
			return getRuleContexts(UpdatingStatementContext.class);
		}
		public UpdatingStatementContext updatingStatement(int i) {
			return getRuleContext(UpdatingStatementContext.class,i);
		}
		public List<WithStContext> withSt() {
			return getRuleContexts(WithStContext.class);
		}
		public WithStContext withSt(int i) {
			return getRuleContext(WithStContext.class,i);
		}
		public ReturnStContext returnSt() {
			return getRuleContext(ReturnStContext.class,0);
		}
		public SingleQueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_singleQuery; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CypherParserListener ) ((CypherParserListener)listener).enterSingleQuery(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CypherParserListener ) ((CypherParserListener)listener).exitSingleQuery(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CypherParserVisitor ) return ((CypherParserVisitor<? extends T>)visitor).visitSingleQuery(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SingleQueryContext singleQuery() throws RecognitionException {
		SingleQueryContext _localctx = new SingleQueryContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_singleQuery);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(198);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==CALL || ((((_la - 74)) & ~0x3f) == 0 && ((1L << (_la - 74)) & 678611L) != 0)) {
				{
				setState(196);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case CALL:
				case MATCH:
				case OPTIONAL:
				case UNWIND:
					{
					setState(193);
					readingStatement();
					}
					break;
				case CREATE:
				case DELETE:
				case DETACH:
				case MERGE:
				case REMOVE:
				case FOREACH:
				case SET:
					{
					setState(194);
					updatingStatement();
					}
					break;
				case WITH:
					{
					setState(195);
					withSt();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(200);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(202);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==RETURN) {
				{
				setState(201);
				returnSt();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ReturnStContext extends ParserRuleContext {
		public TerminalNode RETURN() { return getToken(CypherParser.RETURN, 0); }
		public ProjectionBodyContext projectionBody() {
			return getRuleContext(ProjectionBodyContext.class,0);
		}
		public ReturnStContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_returnSt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CypherParserListener ) ((CypherParserListener)listener).enterReturnSt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CypherParserListener ) ((CypherParserListener)listener).exitReturnSt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CypherParserVisitor ) return ((CypherParserVisitor<? extends T>)visitor).visitReturnSt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ReturnStContext returnSt() throws RecognitionException {
		ReturnStContext _localctx = new ReturnStContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_returnSt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(204);
			match(RETURN);
			setState(205);
			projectionBody();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
